Start finilizing the content to be proposed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "cSpell.language": "en,en-US,en-GB"
+    "cSpell.language": "en,en-US,en-GB",
+    "python.pythonPath": "S:\\opt\\Python381\\python.exe",
+    "cSpell.words": []
 }
