--- a/BDA/conf/data_sets.conf
+++ b/BDA/conf/data_sets.conf
@@ -1,17 +1,30 @@
+[ApacheSpark301]
+download_path = https://downloads.apache.org/spark/spark-3.0.1/spark-3.0.1-bin-hadoop2.7.tgz
+has_readme = True
+filename = spark-3.0.1-bin-hadoop2.7.tgz
+destination_path = sparkhome
+spark_home = sparkhome/spark-3.0.1-bin-hadoop2.7
+type = tgz
+
 [Sentiment140TrainingData]
 download_path = http://cs.stanford.edu/people/alecmgo/trainingandtestdata.zip
-destination_path = sentiment-140-training-data
+destination_path = data-sets/sentiment-140-training-data
 filename = trainingandtestdata.zip
 has_readme = False
 readme_location = http://help.sentiment140.com/for-students/
 license_info = Attribution goes to Sentiment140
+type = zip
 
 [MovieLens-Small]
 download_path = http://files.grouplens.org/datasets/movielens/ml-latest-small.zip
 has_readme = True
 filename = ml-latest-small.zip
+destination_path = data-sets/MovieLens-Small
+type = zip
 
 [MovieLens]
 download_path = http://files.grouplens.org/datasets/movielens/ml-latest.zip
 has_readme = True
 filename = ml-latest.zip
+destination_path = data-sets/MovieLens
+type = zip
