Section 0 - MapReduce starting with Spark/ start

--- a/BDA/conf/data_sets.conf
+++ b/BDA/conf/data_sets.conf
@@ -28,3 +28,10 @@ has_readme = True
 filename = ml-latest.zip
 destination_path = data-sets/MovieLens
 type = zip
+
+[20NewshroupDataSet]
+download_path = http://www.cs.cmu.edu/afs/cs/project/theo-20/www/data/news20.tar.gz
+has_readme = True
+filename = news20.tar.gz
+destination_path = data-sets/20NewshroupDataSet
+type = tgz
